# femtolisp

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  LICENSE  Makefile  Makefile.am  Makefile.macosx  README.md  aliases.scm  ascii-mona-lisa-2  builtins.c  compiler.lsp  configure.ac  cvalues.c  equal.c  equalhash.c  equalhash.h  flisp.boot  flisp.c  flisp.h  flmain.c  iostream.c  mkboot0.lsp  opaque_type_template.c  opcodes.h  operators.c  print.c  read.c  string.c  system.lsp  table.c  todo-scrap  types.c
attic/: s.c  trash.c
femtolisp/: .gitignore  FLOSSING  LICENSE  Makefile  Makefile.macosx  README.md  aliases.scm  ascii-mona-lisa  bootstrap.sh  bq.scm  builtins.c  color.lsp  compiler.lsp  cps.lsp  cvalues.c  equal.c  equalhash.c  flisp.boot  flisp.c  flisp.h  flmain.c  iostream.c  mkboot0.lsp  opcodes.h  perf.lsp  pisum.lsp  print.c  printcases.lsp  read.c  rule30.lsp  stream.c  string.c  system.lsp  table.c  tcolor.lsp  test.lsp  todo  torture.scm  torus.lsp  types.c  (+2 more)
femtolisp/ast/: asttools.lsp  asttools.scm  match.lsp  match.scm  out.lsp  plambda-js.scm  rpasses-out.lsp  rpasses.lsp  rpasses.scm  starpR.lsp  system.lsp
femtolisp/attic/: flutils.c  plists.lsp  scrap.lsp  system-old.lsp  trash.c
femtolisp/examples/: rule30.lsp
femtolisp/lib/: sort.scm
femtolisp/site/: index.html
femtolisp/tests/: err.lsp  hashtest.lsp  printcases.lsp  torus.lsp
femtolisp/tests/ast/: asttools.lsp  match.lsp  match.scm
femtolisp/tiny/: eval1  lisp2.c.bak
lib/: lazy.scm  psyntax.pp
llt/: Makefile  Makefile.macosx  bitvector-ops.c  bitvector.c  bitvector.h  cplxprint.c  dblprint.c  dirpath.c  dirpath.h  dtypes.h  dump.c  fp.c  hashing.c  hashing.h  htable.c  htable.h  htable.inc  htableh.inc  int2str.c  ios.c  ios.h  llt.h  memalign.c  mt19937ar.c  notes  operators.c  pshash.c  ptrhash.c  ptrhash.h  random.h  socket.c  socket.h  swapreverse.c  textread.m  timefuncs.c  u8.txt  unittest.c  utf8.c  utf8.h  utils.c  (+1 more)
llt/attic/: ios.h.old  streams.h  trash.c
tests/: 100x100.lsp  argv.lsp  equal.scm  perf.lsp  tcolor.lsp  tme.lsp  unittest.lsp  wt.lsp
tests/ast/: rpasses-out.lsp
tiny/: Makefile  eval2  flutils.c  lisp-nontail.c  lisp.c  lisp2.c  lispf.c  scrap.c  system.lsp
trunk/femtolisp/: color.lsp  equal.c  flisp.c  flisp.h  system.lsp  test.lsp  todo  torus.lsp  types.c  wt.lsp
trunk/femtolisp/ast/: datetimeR.lsp  match.lsp  rpasses.lsp
trunk/femtolisp/attic/: dict.lsp
trunk/femtolisp/site/: doc  doc.html  flbanner.xcf
trunk/femtolisp/tiny/: Makefile  evalt  lisp  lisp-nontail.c  lisp.c  lisp2  lisp2.c  lispf
trunk/llt/: Makefile  bitvector.c  bitvector.h  dblprint.c  dirpath.c  htable.h  ios.c  random.c  scrap  socket.c  timefuncs.c  unittest.c.1  utf8.c
trunk/llt/attic/: ios.c.old  streams.c
